# hate_crack

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Dockerfile.test  Makefile  README.md  TESTING.md  config.ini  config.json  config.json.example  config.kali.json  hate_crack.py  prek.toml  pyproject.toml  readme.md  requirements.txt  test_hashview.py  wordlist_optimizer.py
.claude/: DOCUMENTATION-AUDIT.md  audit-docs.sh  check-docs.sh  install-hooks.sh  settings.json  verify-setup.sh
.claude/agents/: readme-documentarian.md
.claude/hooks/: doc-audit-trigger.sh
.claude/plans/: 2026-04-22-notifications-submenu.md  2026-04-22-test-pushover-menu.md
.claude/specs/: 2026-04-22-notifications-submenu-design.md  2026-04-22-test-pushover-menu-design.md
.github/workflows/: auto-tag.yml  lint-infra.yml  mypy.yml  pytest-py310.yml  pytest-py311.yml  pytest-py312.yml  pytest-py313.yml  pytest-py314.yml  pytest-py39.yml  pytest.yml  release.yml  ruff.yml  tests.yml  ty.yml  version-bump.yml
PACK/: ChangeLog  LICENSE  README  maskgen.py  policygen.py  rulegen.py  statsgen.py
PACK/enchant/: __init__.py  _enchant.py  errors.py  pypwl.py  tests.py  utils.py
PACK/enchant/checker/: CmdLineChecker.py  GtkSpellCheckerDialog.py  __init__.py  tests.py  wxSpellCheckerDialog.py
PACK/enchant/lib/enchant/: README.txt
PACK/enchant/share/enchant/: README.txt
PACK/enchant/share/enchant/myspell/: README.txt
PACK/enchant/tokenize/: __init__.py  en.py  tests.py
docs/plans/: 2026-03-17-omen-training-fix-design.md  2026-03-17-omen-training-fix.md
hashcat-utils/: CHANGES  README.md
hate_crack/: __init__.py  __main__.py  _root.py  api.py  attacks.py  cli.py  config.json.example  formatting.py  hashmob_wordlist.py  hashview.py  hate_crack.py  main.py  menu.py  passgpt_generate.py  passgpt_train.py  username_detect.py  weakpass.py
hate_crack/notify/: __init__.py  _suppress.py  pushover.py  settings.py  tailer.py
lima/: hate-crack-test.yaml
masks/: holdenSpecial  masks_10.hcmask  masks_8.hcmask  masks_9.hcmask  pathwell.hcmask
princeprocessor/: CHANGES  LICENSE  README.md  pp64.app
princeprocessor/rules/: prince_generated.rule  prince_optimized.rule
tests/: __init__.py  _hashview_local.py  conftest.py  hashview_local_seed.py  run_checks.py  test_adhoc_mask.py  test_api.py  test_api_downloads.py  test_asset_path_separation.py  test_attacks_behavior.py  test_attacks_pcfg.py  test_bare_hash_detection.py  test_cli_flags.py  test_cli_menus.py  test_cli_weakpass.py  test_combinator3_combinatorX.py  test_combinator_wrappers.py  test_combipow_attack.py  test_dependencies.py  test_docker_script_install.py  test_e2e_local_install.py  test_e2e_output_path.py  test_fingerprint_expander_and_hybrid.py  test_hashcat_rules.py  test_hashcat_wrappers.py  test_hashmob_connectivity.py  test_hashview.py  test_hashview_cli_subcommands.py  test_hashview_cli_subcommands_subprocess.py  test_hate_crack_utils.py  test_installed_tool_execution.py  test_invalid_hcatpath.py  test_lima_vm_install.py  test_main_pcfg.py  test_main_utils.py  test_markov_e2e.py  test_menu.py  test_menu_snapshots.py  test_module_imports.py  test_ngram_attack.py  (+39 more)
tools/: ollama_benchmark.py
wordlists/: kill_transmission.sh
